change on linked list